# miniconf

./: CMakeLists.txt
src/: miniconf.cpp  miniconf.h
